Live flight list compiled and clean up. Faster responses
